--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Solearn - Learn the Solar System in 3D</title>
     <meta name="description" content="Prism is a beautiful Bootstrap 4 template for open-source landing pages."/>
 
@@ -27,7 +28,7 @@
             <div class="col-md-8 mx-auto text-center">
                 <h1>Solearn: Learn the Solar System in 3D</h1>
                 <p class="lead mb-5">Solearn is a lightweight, interactive solar system simulator, built with modern web
-                    standards in mind. It is used to show the appeareance of the solar system and its planet.</p>
+                    standards in mind. It is used to show the appearance of the solar system and its planet.</p>
                 <a href="https://github.com/LeaVerou/prism/" class="btn btn-success svg-icon">
                     Open Solearn
                 </a>
