--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="orange"></div>
                         <div class="green"></div>
                     </div>
-                    
+                    <img src="img/solearn.png">
                 </div>
             </div>
         </div>
