--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="img/favicon.png"/>
-    <title>Solation - Solar Exploration in 3D</title>
+    <title>Solex - Solar Exploration in 3D</title>
     <meta name="description" content="Prism is a beautiful Bootstrap 4 template for open-source landing pages."/>
 
     <!--Google font-->
@@ -21,16 +21,16 @@
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
-                <div class="heading-brand">Solation</div>
+                <div class="heading-brand">Solex</div>
             </div>
         </div>
         <div class="row mt-6">
             <div class="col-md-8 mx-auto text-center">
-                <h1>Solation: Solar Exploration in 3D</h1>
-                <p class="lead mb-5">Solation is a lightweight, interactive solar system simulator, built with modern web
+                <h1>Solex: Solar Exploration in 3D</h1>
+                <p class="lead mb-5">Solex is a lightweight, interactive solar system simulator, built with modern web
                     standards in mind. It is used to show the appearance of the solar system and its planet.</p>
                 <a href="https://github.com/LeaVerou/prism/" class="btn btn-success svg-icon">
-                    Open Solation
+                    Open Solex
                 </a>
             </div>
         </div>
