Write HTML for solex web app

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Solex: Solar Exploration in 3D</h1>
                 <p class="lead mb-5">Solex is a lightweight, interactive solar system simulator, built with modern web
                     standards in mind. It is used to show the appearance of the solar system and its planet.</p>
-                <a href="https://github.com/LeaVerou/prism/" class="btn btn-success svg-icon">
+                <a href="solex-app/index.html" class="btn btn-success svg-icon">
                     Open Solex
                 </a>
             </div>
