--- a/solex-app/index.html
+++ b/solex-app/index.html
@@ -34,10 +34,9 @@
         type="text/css"
         href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
       />
-      <link rel="icon" type="image/png" href="Textures/planet-icon.png"/>
-
+      <link rel="icon" type="image/png" href="../img/favicon.png"/>
       <link rel="stylesheet" type="text/css" href="styles.css" />
-      <title>Solation - Solar Exploration in 3D</title>
+      <title>Solex - Solar Exploration in 3D</title>
       <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
