--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <div class="row mt-6">
             <div class="col-md-8 mx-auto text-center">
                 <h1>Solex: Solar Exploration in 3D</h1>
-                <p class="lead mb-5">Solex is a lightweight, interactive solar system simulator, built with modern web
-                    standards in mind. It is used to show the appearance of the solar system and its planet.</p>
+                <p class="lead mb-5">Solex is a lightweight, interactive solar system simulator built with ThreeJS. 
+                    <br>
+                    It is used to demonstrate the solar system and its planet.</p>
                 <a href="solex-app/index.html" class="btn btn-success svg-icon">
                     Open Solex
                 </a>
