Prettify landing page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Solex: Solar Exploration in 3D</h1>
                 <p class="lead mb-5">Solex is a lightweight, interactive solar system simulator built with ThreeJS. 
                     <br>
-                    It is used to demonstrate the solar system and its planet.</p>
+                    It is used to demonstrate the solar system, the planets, and their features.</p>
                 <a href="solex-app/index.html" class="btn btn-success svg-icon">
                     Open Solex
                 </a>
